--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   background-color: #cf4b4b;
 }
 .homePage {
-  background: url(/hero-bg.jpg);
+  background: url(../images/hero-bg.jpg);
   /* width: 100%; */
   height: auto;
   background-size: cover;
